--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="description">Description</string>
     <string name="name">Name</string>
     <string name="newTask">New Task</string>
+    <string name="editTask">Edit Task</string>
     <string name="taskName">Task Name:</string>
     <string name="taskDesc">Task Description:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
