--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="newTask">New Task</string>
     <string name="editTask">Edit Task</string>
     <string name="taskName">Task Name:</string>
+    <string name="checkBox">CheckBox</string>
     <string name="taskDesc">Task Description:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="place_holder">place_holder</string>
 </resources>
