--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="editTask">Edit Task</string>
     <string name="taskName">Task Name:</string>
     <string name="checkBox">CheckBox</string>
+    <string name="delete">Delete</string>
     <string name="taskDesc">Task Description:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="place_holder">place_holder</string>
